[package]
name = "ninarust_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-macros = "0.7.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
hex = "0.4.3"
sha3 = "0.10.8"
ethabi = { version = "18.0.0", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }

[features]
default = ["js"]
js = ["getrandom/js"]