[package]
name = "ninarust_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha3 = "0.10.8"
ethabi = { version = "18.0.0", default-features = false }
num-traits = "0.2.17"
rlp = "0.5.2"

[features]
default = []